# Simbir.Health

./: .gitignore
services/account/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
services/account/src/account/: bootstrap.py
services/account/src/account/application/: errors.py  models.py
services/account/src/account/application/ports/: clock.py  commitable.py
services/account/src/account/application/ports/auth/: identity_provider.py  jwt_token_provider.py  password_service.py
services/account/src/account/application/ports/data/: account_reader.py  refresh_session_gateway.py  user_gateway.py
services/account/src/account/application/ports/factory/: refresh_session_factory.py  user_factory.py
services/account/src/account/application/services/: account_service.py  authentication_service.py
services/account/src/account/infrastructure/: providers.py  utc_clock.py
services/account/src/account/infrastructure/auth/: http_identity_provider.py  jose_jwt_token_provider.py  passlib_password_service.py  pbkdf2_password_service.py  refresh_session_factory.py
services/account/src/account/infrastructure/factory/: user_factory.py
services/account/src/account/infrastructure/persistence/: account_reader.py  map.py  tables.py
services/account/src/account/infrastructure/persistence/data_mappers/: refresh_session_mapper.py  (+1 more)
services/account/src/account/presentation/: auth.py  dishka.py  event_handlers.py  exception_handlers.py
services/account/src/account/presentation/routers/: __init__.py  account_router.py  authentication_router.py  doctor_router.py
(+2 files in other folders)
